# basalt

./: CMakeLists.txt  LICENSE  README.md
demo/: CMakeLists.txt  Demo.vala
lib/: CMakeLists.txt  config.h.cmake
lib/Widgets/Sidebar/: CustomPixbuf.vala  IndicatorBar.vala  PixbuffableIcon.vala  Sidebar.vala  SidebarExpandableRow.vala  SidebarExpandableRowModel.vala  SidebarHeader.vala  SidebarHeaderModel.vala  SidebarParentRowModel.vala  SidebarRow.vala  SidebarRowModel.vala  SidebarStore.vala
lib/Widgets/Wrapbox/: README.md  eggwrapbox-enums.c  eggwrapbox-enums.h  eggwrapbox.h  eggwrapbox.vapi
